# crm

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  README.md  base.html  db_conf.sh  pyproject.toml
crm/config/: asgi.py  urls.py  wsgi.py
crm/config/settings/: base.py  local.py
crm/customers/: apps.py  forms.py  models.py  urls.py  views.py
crm/customers/migrations/: 0001_initial.py
crm/customers/static/customers/css/: main.css
crm/customers/templates/customers/: about.html  base.html  contacts.html  help.html  home.html  record_confirm_delete.html  record_create_form.html  record_update_form.html  user_record_list.html
crm/users/: apps.py  forms.py  urls.py  views.py
crm/users/templates/users/: login.html  register.html
users/: apps.py
