[tool.poetry]
name = "crm-app"
version = "0.1.0"
description = ""
authors = ["Dmytro Masalov <dmitriymasalov5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg = "^3.2.1"
python-decouple = "^3.8"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^2024.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
commitizen = "^3.27.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
